Freestyle uses wrong colour on second Line Set with textured lines in Cycles #43624

Closed
opened 2015-02-10 23:37:32 +01:00 by stephen thomas · 7 comments

System Information
Mac OS X 10.10.1

Blender Version
Broken: 2.73 - 25412d8
Worked: 2.73a - bbf09d9

Short description of error
Using Freestyle in Cycles with textured lines, the colour of both Line Sets are the same as the colour of the first Line Set.

Exact steps for others to reproduce the error

  • Create two objects
  • Set each object to a different group
  • Turn on Freestyle
  • Add two Line Sets, enabling Group of each and select the groups that have been made
  • Turn on 'Use Nodes' for each Line Set and select a line texture (I've attached one with the sample blend)
  • In the node view for each texture, add the texture, turn on tips, disconnect the colour line and connect the alpha line
  • Select a unique colour for each Line Set
  • The second Line Set uses the colour of the first Line Set, rather than its own colour.

Here's the test scene I've put together:

freestyle-bug.zip

Just wanted to say thanks for fixing the bug that makes the render go completely black when freestyle lines aren't in the camera's view. If this new bug could be squashed it would make me a very happy bunny (I'm currently using freestyle on a project that's due within the next couple of days). I'm working around the bug at the minute by switching between Blender versions for particular frames, but fixing this bug will make things a whole lot easier :)

Thanks again, keep up the good work

**System Information** Mac OS X 10.10.1 **Blender Version** Broken: 2.73 - 25412d8 Worked: 2.73a - bbf09d9 **Short description of error** Using Freestyle in Cycles with textured lines, the colour of both Line Sets are the same as the colour of the first Line Set. **Exact steps for others to reproduce the error** - Create two objects - Set each object to a different group - Turn on Freestyle - Add two Line Sets, enabling Group of each and select the groups that have been made - Turn on 'Use Nodes' for each Line Set and select a line texture (I've attached one with the sample blend) - In the node view for each texture, add the texture, turn on tips, disconnect the colour line and connect the alpha line - Select a unique colour for each Line Set - The second Line Set uses the colour of the first Line Set, rather than its own colour. Here's the test scene I've put together: [freestyle-bug.zip](https://archive.blender.org/developer/F142374/freestyle-bug.zip) Just wanted to say thanks for fixing the bug that makes the render go completely black when freestyle lines aren't in the camera's view. If this new bug could be squashed it would make me a very happy bunny (I'm currently using freestyle on a project that's due within the next couple of days). I'm working around the bug at the minute by switching between Blender versions for particular frames, but fixing this bug will make things a whole lot easier :) Thanks again, keep up the good work
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @stephenthomas

Added subscriber: @stephenthomas
Tamito Kajiyama was assigned by Sergey Sharybin 2015-02-11 10:01:31 +01:00

Added subscribers: @kjym3, @Sergey

Added subscribers: @kjym3, @Sergey

@kjym3, this is caused by d8b00a3. That's how far i can go without your assistance :)

@kjym3, this is caused by d8b00a3. That's how far i can go without your assistance :)

This issue was referenced by a0fa3de267

This issue was referenced by a0fa3de267f8c09ed6c7a72716d9dab49dfd4c2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a0fa3de267.

Closed by commit a0fa3de267.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43624
No description provided.